// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child node (trusted) 1`] = `
"<div class=\\"pe-svg\\">
  <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
  \\"false\\">
    <path d=
    \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
    </path>
  </svg>
</div>
"
`;

exports[`Dark tone class + light tone 1`] = `
"<div style=\\"background: rgb(255, 255, 255); padding: 8px;\\">
  <div class=\\"pe-svg pe-light-tone\\">
    <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
    \\"false\\">
      <path d=
      \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
      </path>
    </svg>
  </div>
</div>
"
`;

exports[`Dark tone class + light tone class 1`] = `
"<div style=\\"background: rgb(255, 255, 255); padding: 8px;\\" class=
\\"pe-light-tone\\">
  <div class=\\"pe-svg\\">
    <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
    \\"false\\">
      <path d=
      \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
      </path>
    </svg>
  </div>
</div>
"
`;

exports[`No options 1`] = `
"<div class=\\"pe-svg\\"></div>
"
`;

exports[`Option: class 1`] = `
"<div class=\\"pe-svg class-x\\"></div>
"
`;

exports[`Option: className 1`] = `
"<div class=\\"pe-svg className-x\\"></div>
"
`;

exports[`Option: content (trusted) 1`] = `
"<div class=\\"pe-svg\\">
  <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
  \\"false\\">
    <path d=
    \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
    </path>
  </svg>
</div>
"
`;

exports[`Option: content -- dark tone class 1`] = `
"<div class=\\"pe-svg\\">
  <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
  \\"false\\">
    <path d=
    \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
    </path>
  </svg>
</div>
"
`;

exports[`Option: element 1`] = `
"<a class=\\"pe-svg\\"></a>
"
`;

exports[`Option: id 1`] = `
"<div id=\\"id-x\\" class=\\"pe-svg\\"></div>
"
`;

exports[`Option: style (color) 1`] = `
"<div style=\\"color: rgb(239, 108, 0);\\" class=\\"pe-svg\\">
  <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
  \\"false\\">
    <path d=
    \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
    </path>
  </svg>
</div>
"
`;

exports[`Themed (color) -- dark tone class 1`] = `
"<div class=\\"pe-svg tests-svg-themed-svg\\">
  <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
  \\"false\\">
    <path d=
    \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
    </path>
  </svg>
</div>
"
`;

exports[`Themed (color) 1`] = `
"<div class=\\"pe-svg tests-svg-themed-svg\\">
  <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
  \\"false\\">
    <path d=
    \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
    </path>
  </svg>
</div>
"
`;
